external-crates/move/crates/move-compiler/tests/move_check/naming/unbound_struct_in_module.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E03004]: unbound type
  ┌─ tests/move_check/naming/unbound_struct_in_module.move:6:16
  │
6 │     fun foo(s: X::S): X::S {
  │                ^^^^ Invalid module access. Unbound type 'S' in module '0x2::X'

error[E03004]: unbound type
  ┌─ tests/move_check/naming/unbound_struct_in_module.move:6:23
  │
6 │     fun foo(s: X::S): X::S {
  │                       ^^^^ Invalid module access. Unbound type 'S' in module '0x2::X'
